--- a/Checkpoint_WCircus/MainWindow.xaml
+++ b/Checkpoint_WCircus/MainWindow.xaml
@@ -5,9 +5,52 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:local="clr-namespace:Checkpoint_WCircus"
-        mc:Ignorable="d" Loaded="Window_Loaded" WindowStartupLocation="CenterScreen"
-        Title="MainWindow" Height="450" Width="800">
+        mc:Ignorable="d" WindowStartupLocation="CenterScreen"
+        Title="MainWindow" Height="600" Width="800" ResizeMode="CanResize">
+    <Window.Resources>
+        <Style TargetType="TextBlock">
+            <Setter Property="Foreground" Value="IndianRed" />
+            <Setter Property="FontFamily" Value="Algerian" />
+        </Style>
+    </Window.Resources>
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="4*" />
+        </Grid.RowDefinitions>
 
+        <Grid  Grid.Row="0" Background="Navy">
+            <TextBlock Grid.Column="1" Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center" FontWeight="Heavy" FontSize="40" >Welcome to KungFu Circus!</TextBlock>
+        </Grid>
+        <Grid  Grid.Row="1">
+            <StackPanel Orientation="Horizontal" Margin="60, 0, 0, 0">
+                <RadioButton FontSize="20"
+                    x:Name="homeButton"  Style="{StaticResource MaterialDesignTabRadioButton}"
+                    Margin="4"
+                    IsChecked="True"
+                    Content="HOME" Click="homeButton_Click"
+                    />
+                <RadioButton FontSize="20"
+                    x:Name="tamersButton" Style="{StaticResource MaterialDesignTabRadioButton}"
+                    Margin="4"
+                    IsChecked="False"
+                    Content="TAMERS" Click="tamersButton_Click" />
+                <RadioButton FontSize="20"
+                    x:Name="animalsButton" Style="{StaticResource MaterialDesignTabRadioButton}"
+                    Margin="4"
+                    IsChecked="False"
+                    Content="ANIMALS" Click="animalsButton_Click" />
+                <RadioButton FontSize="20"
+                    x:Name="contactButton" Style="{StaticResource MaterialDesignTabRadioButton}"
+                    Margin="4"
+                    IsChecked="False"
+                    Content="CONTACT and API" Click="contactButton_Click"/>
+            </StackPanel>
+        </Grid>
+
+        <Grid  x:Name="coreGrid" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="2" Margin="0, 0, 0, 20">
+            <Image x:Name="titleImage" />
+        </Grid>
     </Grid>
 </Window>
