--- a/Checkpoint_WCircus/TamersControl.xaml
+++ b/Checkpoint_WCircus/TamersControl.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:local="clr-namespace:Checkpoint_WCircus"
-             mc:Ignorable="d"
+             mc:Ignorable="d" Loaded="UserControl_Loaded"
              d:DesignHeight="380" d:DesignWidth="800">
     <Grid Height="380" Width="800">
         <Grid>
